Added video link for case build

--- a/dns.html
+++ b/dns.html
@@ -64,28 +64,25 @@
         <section id="projects" class="section">
             <div class="project-card">
                 <h2>🚀 Initial Raspberry Pi Setup</h2>
-
-                <h3><span class="step-counter">1 </span>Built case and installed NVME</h3>
-                <p>Prepared the Raspberry Pi 5
-                Ensured the Raspberry Pi 5 was free from thermal pads, heatsinks, or HATs. Inserted the CR1220 battery into the RTC holder. Connected the PCIe and RTC battery cables, noting the orientation of the FPC PCIe cable.</p>
-
-                <div class="code-block"></div>
-
-                <h3><span class="step-counter">2 </span>Installed the Power Button</h3>
-                <p>Mounted the power button in the case and connect it to the Raspberry Pi 5 using the provided cables.</p>
-                <div class="code-block"></div>
-
-                <h3><span class="step-counter">3 </span>Attached the Tower Cooler</h3>
-                <p>Applied thermal pads to the BCM2712 SoC, wireless module, and VLI chip on the Raspberry Pi 5. Installed the tower cooler using the provided plastic bits with springs. Connected the 4-pin fan wire to the fan connector on the Raspberry Pi 5.</p>
-                <div class="code-block"></div>
-
-                <h3><span class="step-counter">4 </span>Installed the M.2 SSD</h3>
-                <p>I used a NVMe SSD, installed the stud in the appropriate location 2242. Secured the SSD in the M.2 M key slot and fastened it with screws. Connected the SSD to the PCIe adapter board.</p>
-                <div class="code-block"></div>
-
-                <h3><span class="step-counter">5 </span>Assembled the Case</h3>
-                <p>Installed the two fans with dust filters into the case. Attached the acrylic plate to the IO HAT+ after removing protective films. Connected the fans and OLED display. Inserted the IO HAT+ into the 40-pin GPIO header of the Raspberry Pi 5. Secured both metal parts of the case together. Installed the remaining acrylic plates and secured them with screws.</p>
-            </div>
+		  <p> I followed the instructions from this helpful video, along with the manual, to assemble the 
+                      PironMan 5 case. However, I initially purchased the wrong SD card—a regular SD card instead of 
+                      a microSD card. This led me to make a quick trip to the store during assembly to get the correct      
+                      microSD card and a converter to connect it to my PC.</p>
+               <div class="video-container">
+                 <iframe 
+                   width="560" 
+                   height="315" 
+                   src="https://www.youtube.com/embed/Rx9UNRfzjI4" 
+                   title="YouTube video player" 
+                   frameborder="0" 
+                   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+                   allowfullscreen>
+                </iframe>
+             </div> 
+               <p>Video by <a href="https://www.youtube.com/channel/[ChannelName]" target="_blank">Wagner's Tech Talk</a>.
+                Watch
+                the full video <a href="https://www.youtube.com/watch?v=Rx9UNRfzjI4" target="_blank">here</a>.</p>            
+             </div>
         </section>
 
         <section id="projects" class="section">
