Fixing broken Hero Image link

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     </div>
                     <div class="hero-image">
                         <div class="profile-photo">
-                            <img src="profile.png" alt="Jason Schriner - Systems Engineer" />
+                            <img src="images/profile.png" alt="Jason Schriner - Software Developer" />
                             <div class="photo-border"></div>
                         </div>
                     </div>
