Fixing Achievement photo links

--- a/index.html
+++ b/index.html
@@ -158,9 +158,9 @@
       <section id="achievements" class="section">
         <div class="container">
            <h2>Academic Achievements</h2>
-           <img src="SmallLogo.png" alt="Omega Nu Lambda">
-           <img src="deansListSpring.png" alt="Deans List Spring">           
-           <img src="deansListFall.png" alt="Deans List Fall">          
+           <img src="images/SmallLogo.png" alt="Omega Nu Lambda">
+           <img src="images/deansListSpring.png" alt="Deans List Spring">           
+           <img src="images/deansListFall.png" alt="Deans List Fall">          
         </div>
       </section>
 
