Edited DNS page condensing the project overview and hardware to one

--- a/dns.html
+++ b/dns.html
@@ -15,8 +15,8 @@
 
         <section id="projects" class="section">
             <div class="project-card">
-                <h2>🎯 Project Overview</h2>
-                <p>This is meant to detail the steps I took to setup a DNS on a Raspberry pi</p>
+                <h2>🎯 Project Overview & Hardware</h2>
+                <p>This page is a walkthrough of my home DNS setup and installation</p>
 
                 <div class="architecture-diagram">
                     <h4>🏗️ Network Architecture</h4>
@@ -24,39 +24,28 @@
                     <p>📱 Phones • 💻 Laptops • 📺 Smart TVs • 🏠 IoT Devices</p>
                 </div>
 
-                <h3>Key Features</h3>
-                <ul>
-                    <li><strong>Network-wide Ad Blocking:</strong> Block ads and trackers across all devices</li>
-                    <li><strong>Custom DNS Records:</strong> Easy access to local services (e.g., server.local)</li>
-                    <li><strong>High Availability:</strong> Automatic failover to backup DNS servers</li>
-                    <li><strong>Detailed Analytics:</strong> Monitor DNS queries and blocked content</li>
-                    <li><strong>Low Power Consumption:</strong> Runs 24/7 on minimal electricity</li>
-                </ul>
-            </div>
-        </section>
-
-        <section id="projects" class="section">
-            <div class="project-card">
-                <h2>🛠️ Project Hardware</h2>
-
-                <div class="requirements">
-                    <h4>Hardware</h4>
-                    <ul>
-                        <li>Raspberry Pi 5 8GB ram</li>
-                        <li>32gb MicroSD card</li>
-                        <li>1TB NVME SSD PCIe</li>
-                        <li>Power supply (official Raspberry Pi power adapter)</li>
-                        <li>Pironman 5 NVMe M.2 SSD PCIe Mini PC Case</li>
-                    </ul>
-                </div>
-
-                <div class="requirements">
-                    <h4>Software Used</h4>
-                    <ul>
-                        <li>Raspberry Pi-hole</li>
-                        <li>UFW</li>
-                        <li>Proton VPN</li>
-                    </ul>
+                <div class="overview-grid" style="display: grid; grid-template-columns: 1fr 1fr; gap: 2rem; margin: 2rem 0;">
+                    <div>
+                        <h3>Key Features</h3>
+                        <ul>
+                            <li><strong>Network-wide Ad Blocking:</strong> Block ads and trackers across all devices</li>
+                            <li><strong>Custom DNS Records:</strong> Easy access to local services (e.g., server.local)</li>
+                            <li><strong>High Availability:</strong> Automatic failover to backup DNS servers</li>
+                            <li><strong>Detailed Analytics:</strong> Monitor DNS queries and blocked content</li>
+                            <li><strong>Low Power Consumption:</strong> Runs 24/7 on minimal electricity</li>
+                        </ul>
+                    </div>
+                    <div>
+                        <h3>Hardware & Software</h3>
+                        <h4>Hardware</h4>
+                        <ul>
+                            <li>Raspberry Pi 5 8GB ram</li>
+                            <li>32gb MicroSD card</li>
+                            <li>1TB NVME SSD PCIe</li>
+                            <li>Power supply (official Raspberry Pi power adapter)</li>
+                            <li>Pironman 5 NVMe M.2 SSD PCIe Mini PC Case</li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </section>
@@ -109,7 +98,7 @@
 		     increased storage and faster read/write speeds.</p>
 
 	      <h3><span class="step-counter"></span>What I Would Do Differently</h3>
-		  <p>I used AI to assist me with this project, but for future projects, I’d like to take more notes and 
+		  <p>I used AI to assist me with this project, but for future projects, I'd like to take more notes and 
 		     learn more from the process. I also want to try using an Orange Pi. Although they are not as 
    		     well-supported, they offer much greater performance while still being affordable.</p>
               
