Adding Credly badge and achievement verification links

--- a/index.html
+++ b/index.html
@@ -158,9 +158,25 @@
       <section id="achievements" class="section">
         <div class="container">
            <h2>Academic Achievements</h2>
-           <img src="images/SmallLogo.png" alt="Omega Nu Lambda">
-           <img src="images/deansListSpring.png" alt="Deans List Spring">           
-           <img src="images/deansListFall.png" alt="Deans List Fall">          
+	   <a href="OmegaNuLambda.pdf" target="_blank" rel="noopener noreferrer">
+  	   <img src="images/SmallLogo.png" alt="Omega Nu Lambda">
+	   </a>           
+          
+	   <a href="https://achievements.bellevue.edu/profile/jasonschriner108604/wallet" target="_blank" rel="noopener
+	      noreferrer">
+           <img src="images/deansListSpring.png" alt="Deans List Spring">
+	   </a>
+
+	   <a href="https://achievements.bellevue.edu/profile/jasonschriner108604/wallet" target="_blank" rel="noopener 
+	    noreferrer">
+ 	   <img src="images/deansListFall.png" alt="Deans List Fall">
+	   </a>
+
+	   <a href="https://www.credly.com/badges/2185f0d7-c7d7-4e82-8452-25b753131dc3/public_url" target="_blank" 		    rel="noopener noreferrer">
+   	   <img src="images/at-t-2025-technology-academy.png" alt="AT&T Technology Academy">
+	   </a>  
+	   <p class="center-text">Click Image to verify</p>
+      
         </div>
       </section>
 
