--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                             <span class="tech-tag">Pi-hole</span>
                             <span class="tech-tag">Linux</span>
                             <span class="tech-tag">UFW</span>
-                            <span class="tech-tag">Proton VPN</span>
+                            <span class="tech-tag">Wiregaurd VPN</span>
                         </div>
                         <div class="project-links">
                             <a href="dns.html" class="project-link">📖 Project Guide</a>
