Edited DNS configuration

--- a/dns.html
+++ b/dns.html
@@ -53,9 +53,8 @@
             <div class="project-card">
                 <h2>🚀 Initial Raspberry Pi Setup</h2>
 		  <p> I followed the instructions from this helpful video, along with the manual, to assemble the 
-                      PironMan 5 case. However, I initially purchased the wrong SD card—a regular SD card instead of 
-                      a microSD card. This led me to make a quick trip to the store during assembly to get the correct      
-                      microSD card and a converter to connect it to my PC.</p>
+                      PironMan 5 case. This project can be done with just a raspberry pi without the pironman case. I chose 		      this case as it comes with adapter boards to increase functionality. Based on cost you could purchase
+		      a cheap micro desktop for the same cost. I chose to go with the pi for the learning experience. </p>
                <div class="video-container">
                  <iframe 
                    width="560" 
@@ -96,10 +95,11 @@
 		     software, and configure it to boot from the drive instead of the microSD card. This setup provides 
 		     increased storage and faster read/write speeds.</p>
 
-	      <h3><span class="step-counter"></span>What I Would Do Differently</h3>
-		  <p>I used AI to assist me with this project, but for future projects, I'd like to take more notes and 
-		     learn more from the process. I also want to try using an Orange Pi. Although they are not as 
-   		     well-supported, they offer much greater performance while still being affordable.</p>
+	      <h3><span class="step-counter"></span>Impact</h3>
+		  <p>This project allowed me to gain hands-on experience working with a Raspberry Pi and setting up a DNS
+		     server, while also providing continued opportunities to work with network security tools such as a
+		     firewall. Additionally, it helped me understand how to minimize the attack surface by implementing
+		     proper configurations and access controls. </p>
               
             </div>
         </section>
