Adding Deans List badge

--- a/index.html
+++ b/index.html
@@ -175,6 +175,11 @@
 	   <a href="https://www.credly.com/badges/2185f0d7-c7d7-4e82-8452-25b753131dc3/public_url" target="_blank" 		    rel="noopener noreferrer">
    	   <img src="images/at-t-2025-technology-academy.png" alt="AT&T Technology Academy">
 	   </a>  
+	   <a href="https://achievements.bellevue.edu/profile/jasonschriner108604/wallet" target="_blank" rel="noopener 
+	    noreferrer">
+ 	   <img src="images/deansListSpring2.png" alt="Deans List Spring 2">
+	   </a>
+
 	   <p class="center-text">Click Image to verify</p>
       
         </div>
