--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 	   </a>  
 	   <a href="https://achievements.bellevue.edu/profile/jasonschriner108604/wallet" target="_blank" rel="noopener 
 	    noreferrer">
- 	   <img src="images/deansListSpring2.png" alt="Deans List Spring 2">
+ 	   <img src="images/DeansListSpring2.png" alt="Deans List Spring 2">
 	   </a>
 
 	   <p class="center-text">Click Image to verify</p>
