Pushing style update to Weather API

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 
  <!-- Weather Widget -->
 <div class="status-indicator">
+  <p>Current Weather</p>
   <h3 id="city" class="weather-title"></h3>
   <p id="temp" class="weather-display"></p>
   <p id="description" class="weather-display"></p>
