Pushing new webGuide for Portfolio Site

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                     </div>
                        <div class="project-links">
                            <a href="webGuide.html" class="project-link">📖 Setup Guide</a>
-                           <a href="sourceCode.html" class="project-link">💻 Source Code</a>
+                           <a href="https://github.com/skitch518/bioSite" class="project-link">💻 Source Code</a>
                        </div>
                     </div>
           
@@ -83,7 +83,7 @@
                     <div class="project-icon">📊</div>
                     <h3>Stock Portfolio Tracker</h3>
                     <p>
-                       Multi-platform investment aggregator providing unified portfolio analytics across traditional brokerages, cryptocurrency exchanges, and alternative asset platforms. Handles asynchronous data fetching, real-time price updates, and comprehensive performance metrics with support for multiple asset classes.
+                       Full-stack portfolio aggregator enabling investors to track net worth across multiple platforms (brokerages, crypto exchanges, 401k, prediction markets). Features real-time market data integration, asset allocation analytics, historical performance tracking, and tax-advantaged account categorization."
                       
                     </p>
                     <div class="tech-stack">
